--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,13 @@ body {
   font-size: 2em;
   font-weight: bold;
 }
+
+#play {
+	background: #ed3330;
+  text-transform: uppercase;
+	padding: 20px;
+  margin: 5px 0 0 5px;
+	border-radius: 5px;
+	border: none;
+  cursor: pointer;
+}
